--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_regular"
             android:hint="@string/name"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_15sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_regular"
+            app:boxStrokeWidth="0.7dp"
             android:hint="@string/email"
             android:layout_marginTop="@dimen/_15sdp"
             app:layout_constraintEnd_toEndOf="parent"
