--- a/app/src/main/res/drawable/grey_dark_stroke.xml
+++ b/app/src/main/res/drawable/grey_dark_stroke.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="1dp"
+        android:width="0.7dp"
         android:color="@color/grey" />
-    <corners android:radius="@dimen/_3sdp" />
+    <corners android:radius="3dp" />
 
-    <solid android:color="@color/white" />
+    <solid android:color="@android:color/white" />
 
 </shape>
