--- a/app/src/main/res/layout/dialog_add_customer.xml
+++ b/app/src/main/res/layout/dialog_add_customer.xml
@@ -43,6 +43,7 @@
                 android:id="@+id/til_customer_name"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                app:boxStrokeWidth="0.7dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:hint="@string/customer_name"
@@ -65,6 +66,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:boxStrokeWidth="0.7dp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:hint="@string/customer_phone_number"
                 app:layout_constraintEnd_toEndOf="parent"
