--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,7 +54,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="@{userModel.isExecutive() ? @string/dhaba_mnagement : @string/my_dhabas}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/tvAddNew"
@@ -67,7 +67,7 @@
                     android:text="@string/add_new"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="16sp"
                     android:visibility="@{userModel.isManager() ? View.GONE : View.VISIBLE}" />
 
             </LinearLayout>
