--- a/app/src/main/res/layout/fragment_other_amenities.xml
+++ b/app/src/main/res/layout/fragment_other_amenities.xml
@@ -51,7 +51,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/mechanic_shop"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_14ssp" />
+                        android:textSize="16sp" />
 
                     <RadioGroup
                         android:id="@+id/rgMechYesNo"
@@ -161,7 +161,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/puncture_shop"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_14ssp" />
+                        android:textSize="16sp" />
 
                     <RadioGroup
                         android:id="@+id/rgPuncture_24_7YesNo"
@@ -271,7 +271,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/daily_utility_shop"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_14ssp" />
+                        android:textSize="16sp" />
 
                     <RadioGroup
                         android:id="@+id/rgUtilityYesNo"
@@ -381,7 +381,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/barber"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_14ssp" />
+                        android:textSize="16sp" />
 
                     <RadioGroup
                         android:id="@+id/rgBarberYesNo"
@@ -506,7 +506,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/upload_pics"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_14ssp" />
+                            android:textSize="16sp" />
 
                     </LinearLayout>
 
@@ -528,6 +528,7 @@
                     android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
+                    android:textSize="18sp"
                     android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}" />
 
                 <Button
@@ -539,6 +540,7 @@
                     android:text="@string/skip"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
+                    android:textSize="18sp"
                     android:visibility="@{viewOnly||isUpdate ? View.GONE : View.VISIBLE}" />
 
             </LinearLayout>
