--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,8 +6,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/_15sdp">
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/settingsText"
@@ -16,14 +15,15 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/settings"
+            android:layout_marginHorizontal="15dp"
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_15sdp"
             android:elevation="@dimen/_3sdp"
+            android:layout_margin="@dimen/_15sdp"
             app:cardBackgroundColor="@color/white">
 
             <LinearLayout
@@ -58,7 +58,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/profile"
                         android:textColor="@color/grey1"
-                        android:textSize="@dimen/_16ssp" />
+                        android:textSize="18sp" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="wrap_content"
@@ -101,7 +101,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/change_language"
                             android:textColor="@color/grey1"
-                            android:textSize="@dimen/_16ssp" />
+                            android:textSize="18sp" />
 
                         <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/languageText"
@@ -111,7 +111,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="English"
                             android:textColor="@color/grey"
-                            android:textSize="@dimen/_13sdp" />
+                            android:textSize="13sp" />
                     </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -153,7 +153,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/logout"
                         android:textColor="@color/grey1"
-                        android:textSize="@dimen/_16ssp" />
+                        android:textSize="18sp" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="wrap_content"
