--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -50,7 +50,7 @@
             android:fontFamily="@font/opensans_regular"
             android:text="@string/sign_up"
             android:textColor="@color/black"
-            android:textSize="@dimen/_24ssp" />
+            android:textSize="26sp" />
 
         <LinearLayout
             android:id="@+id/llExecutiveLogin"
@@ -64,7 +64,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_15sdp"
                 android:fontFamily="@font/opensans_regular"
-                android:hint="@string/name_">
+                android:hint="@string/name_"
+                app:boxStrokeWidth="0.7dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edName"
@@ -74,7 +75,7 @@
                     android:inputType="textPersonName"
                     android:text="@={vm.nameObervable}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
+                    android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,13 +99,13 @@
                     android:gravity="center"
                     app:ccp_defaultCode="91"
                     app:ccp_hideNameCode="true"
-                    app:ccp_textSize="@dimen/_12ssp" />
+                    app:ccp_textSize="16sp" />
 
                 <View
                     android:layout_width="0.5dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/_2sdp"
-                    android:background="@color/grey_stroke" />
+                    android:background="@color/grey" />
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edPhoneNumber"
@@ -121,13 +122,14 @@
                     android:text="@={vm.phoneNumberObserver}"
                     android:textColor="@color/black"
                     android:textColorHint="@color/grey"
-                    android:textSize="@dimen/_14ssp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:boxStrokeWidth="0.7dp"
                 android:layout_marginHorizontal="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:hint="@string/email"
@@ -140,7 +142,7 @@
                     android:inputType="textEmailAddress"
                     android:text="@={vm.emailObservable}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
+                    android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -162,7 +164,7 @@
                 android:text="@string/sign_up"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_16ssp" />
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/btnLogin"
@@ -172,9 +174,9 @@
                 android:background="@drawable/default_btn_selector"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/login"
-                android:textSize="@dimen/_16ssp"
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
