--- a/app/src/main/res/layout/layout_other_amenities.xml
+++ b/app/src/main/res/layout/layout_other_amenities.xml
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/name"
             android:layout_marginTop="@dimen/_10sdp"
+            app:boxStrokeWidth="0.7dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/onboardedByText">
@@ -68,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/onboarding_date"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +113,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxStrokeWidth="0.7dp"
             android:hint="@string/name"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -133,6 +136,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxStrokeWidth="0.7dp"
             android:hint="@string/phone_number"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -156,6 +160,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/area_head"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -200,6 +205,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -222,6 +228,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/phone_number"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -243,6 +250,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxStrokeWidth="0.7dp"
             android:hint="@string/head"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -288,6 +296,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/bank"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -310,6 +319,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/gst_number"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -333,6 +343,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/ifsc_code"
             android:layout_marginTop="@dimen/_10sdp"
+            app:boxStrokeWidth="0.7dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gstNumberTil">
@@ -355,6 +366,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/account_holder_name"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -377,6 +389,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/pan_number"
+            app:boxStrokeWidth="0.7dp"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -489,6 +502,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/choose_months"
             android:layout_marginTop="@dimen/_10sdp"
+            app:boxStrokeWidth="0.7dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/blockingSystemLayout">
