--- a/app/src/main/res/layout/row_side_menu.xml
+++ b/app/src/main/res/layout/row_side_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -32,30 +32,44 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/containerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <ImageView
-            imageResource="@{data.selected ? data.hilightedIcon : data.icon}"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_35sdp"
-            android:padding="@dimen/_7sdp" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvMenuTitle"
+        <LinearLayout
+            android:id="@+id/containerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_regular"
-            android:orientation="vertical"
-            android:padding="@dimen/_10sdp"
-            android:text="@{data.title}"
-            android:textColor="@{data.selected ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
-            android:textSize="@dimen/_14ssp"
-            app:isBold="@{data.selected}"
-            tools:text="Dhaba List" />
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                imageResource="@{data.selected ? data.hilightedIcon : data.icon}"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:padding="@dimen/_7sdp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvMenuTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_regular"
+                android:orientation="vertical"
+                android:padding="@dimen/_15sdp"
+                android:text="@{data.title}"
+                android:textColor="@{data.selected ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
+                android:textSize="16sp"
+                app:isBold="@{data.selected}"
+                tools:text="Dhaba List" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey_stroke" />
 
     </LinearLayout>
 </layout>
