--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -47,7 +47,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:text="@{userModel.ownerName}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
+                    android:textSize="19sp"
                     tools:text="Profile Name" />
 
                 <ImageView
